Fixed problem when parsing header and body information and server response body contained \r\n\r\n

--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
 		<copy todir="${dir.deploy}">
 			<fileset refid="fileset_test" />
 		</copy>
-		<copy todir="${dir.deploy}/includes">
+		<copy todir="${dir.deploy}/vendor/xqueue/maileon-api-client/src">
 			<fileset refid="fileset_client" />
 		</copy>
 	</target>
