--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		"ext-libxml" : "*"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "^4"
+		"phpunit/phpunit" : "^4",
+		"phpstan/phpstan": "^1.8"
 	},
 	"autoload" : {
 		"psr-4" : {
