Added method to update transaction types Added sanitizer method to remove the ID field of attributes of transaction types when updating, as this causes an error

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 vendor/
 composer.lock
 level*errors.txt
+.buildpath
+.project
+.settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.wst.validation.prefs
