Updated several reporting ressources
Added additional parameters to getUniqueOpens, getUniqueOpensCount, getUniqueClicks and getUniqueClicksCount

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ composer.lock
 level*errors.txt
 .buildpath
 .project
-.settings/org.eclipse.core.resources.prefs
-.settings/org.eclipse.wst.validation.prefs
+.settings/
+.idea/
